--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   @font-face {
   font-family: 'SF Pro Display';
-  src: url('fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
+  src: url('SFPRODISPLAYREGULAR.OTF') format('opentype');
   /* Add other font properties as needed */
 }
 
@@ -186,31 +186,31 @@
   <div class="hero01-container">
     <div class="hero01-hero01">
       <div class="hero01-navbar">
-        <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+        <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
         <div class="hero01-frame4">
           <span class="hero01-text"><a href="shop.html">Shop</a></span>
           <span class="hero01-text02"><a href="team.html">Team</a></span>          
           <span class="hero01-text04"><a href="about.html">About</a></span>
           <div class="hero01-group6">
-            <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+            <img alt="SearchI162" src="search9.svg" class="hero01-search">
             <span class="hero01-text06">Search</span>
           </div>
         </div>
-        <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+        <img alt="Line1I162" src="line36t.svg" class="hero01-line1">
         <div class="hero01-frame5">
           <div class="hero01-group4">
             <span class="hero01-text08">3</span>
-            <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+            <img alt="VectorI162" src="vectorer7.svg" class="hero01-vector">
           </div>
           <span class="hero01-text09">Login</span>
         </div>
       </div>
-      <img alt="R115027" src="public/playground_assets/logo.png" class="hero01-r11">
+      <img alt="R115027" src="logo.png" class="hero01-r11">
       <span class="hero01-text11 Heading02">Collect. Curate. Inspire</span>
       <span class="hero01-text13 Paragraph01">Passionately curating hobbies and collections for every enthusiast.</span>
       <div class="hero01-secondary"></div>
     </div>
-    <img alt="Image770" src="public\playground_assets\Heavyarms EW.png" class="hero01-image">
+    <img alt="Image770" src="Heavyarms EW.png" class="hero01-image">
   </div>
   <div class="content-container">
     <div class="title">Our Latest Collections</div>
