--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <div class="footer-navigation">
         <a href="#">Home</a>
         <a href="#">Shop</a>
-        <a href="#">Stories</a>
+        <a href="#">Team</a>
         <a href="#">About</a>
       </div>
     </div>
