--- a/team.html
+++ b/team.html
@@ -51,21 +51,21 @@
     <div class="hero01-container">
         <div class="hero01-hero01">
           <div class="hero01-navbar">
-            <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+            <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
             <div class="hero01-frame4">
               <span class="hero01-text"><a href="shop.html">Shop</a></span>
               <span class="hero01-text02">Stories</span>
               <span class="hero01-text04">About</span>
               <div class="hero01-group6">
-                <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+                <img alt="SearchI162" src="search9.svg" class="hero01-search">
                 <span class="hero01-text06">Search</span>
               </div>
             </div>
-            <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+            <img alt="Line1I162" src="line36t.svg" class="hero01-line1">
             <div class="hero01-frame5">
               <div class="hero01-group4">
                 <span class="hero01-text08">3</span>
-                <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+                <img alt="VectorI162" src="vectorer7.svg" class="hero01-vector">
               </div>
               <span class="hero01-text09">Login</span>
             </div>
@@ -74,27 +74,27 @@
               
   <div class="team-container">
     <div class="team-member">
-      <img src="public\playground_assets\gab.jpg" alt="Profile Picture">
-      <div class="team-member-name">John Doe</div>
+      <img src="gab.jpg" alt="Profile Picture">
+      <div class="team-member-name">Gabriel Ventura</div>
       <div class="team-member-position">CEO</div>
       <div class="team-member-description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis vehicula odio.
+        A visionary leader at the helm of RareFinds™, Gabriel curates an exceptional collection of rare items, <br>captivating collectors worldwide.
       </div>
     </div>
     <div class="team-member">
-      <img src="public\playground_assets\drake.jpg" alt="Profile Picture">
-      <div class="team-member-name">Jane Smith</div>
+      <img src="drake.jpg" alt="Profile Picture">
+      <div class="team-member-name">Raven Drake Cruz</div>
       <div class="team-member-position">COO</div>
       <div class="team-member-description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis vehicula odio.
+        With a passion for efficiency and a keen eye for detail, Raven oversees the seamless operations at RareFinds™, <br> ensuring unparalleled customer satisfaction.
       </div>
     </div>
     <div class="team-member">
-      <img src="public\playground_assets\robert.jpg" alt="Profile Picture">
-      <div class="team-member-name">Michael Johnson</div>
-      <div class="team-member-position">CTO</div>
+      <img src="robert.jpg" alt="Profile Picture">
+      <div class="team-member-name">Robert Leoni Mirabel</div>
+      <div class="team-member-position">CFO</div>
       <div class="team-member-description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis vehicula odio.
+      As  the astute CFO of RareFinds™, Robert expertly manages finances, optimizing revenue streams and driving strategic decisions<br> for the sustainable growth of the rare item and goods marketplace.
       </div>
     </div>
   </div>
