--- a/team.html
+++ b/team.html
@@ -53,9 +53,9 @@
           <div class="hero01-navbar">
             <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
             <div class="hero01-frame4">
-              <span class="hero01-text"><a href="shop.html">Shop</a></span>
-              <span class="hero01-text02">Stories</span>
-              <span class="hero01-text04">About</span>
+             <span class="hero01-text"><a href="shop.html">Shop</a></span>
+              <span class="hero01-text02"><a href="team.html">Team</a></span>
+              <span class="hero01-text04"><a href="about.html">About</a></span>
               <div class="hero01-group6">
                 <img alt="SearchI162" src="search9.svg" class="hero01-search">
                 <span class="hero01-text06">Search</span>
