--- a/shop.html
+++ b/shop.html
@@ -160,8 +160,8 @@ html {
                 <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
                 <div class="hero01-frame4">
                   <span class="hero01-text"><a href="shop.html">Shop</a></span>
-                  <span class="hero01-text02" style="color: white;">Stories</span>
-                  <span class="hero01-text04"  style="color: white;">About</span>
+                  <span class="hero01-text02" style="color: white;"><a href="team.html">Team</a></span>
+                  <span class="hero01-text04"  style="color: white;"><a href="about.html">About</a></span>
                   <div class="hero01-group6">
                     <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
                     <span class="hero01-text06"  style="color: white;">Search</span>
