--- a/about.html
+++ b/about.html
@@ -58,6 +58,39 @@
   </style>
 </head>
 <body>
+      <div class="hero01-hero01">
+        <div class="hero01-navbar">
+            <div class="hero01-navbar">
+                <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+                <div class="hero01-frame4">
+                  <h1 class="hero01-heading" style="font-family: 'SF Pro Display', sans-serif;"><br><br>The Summer 2023 Collections</h1>
+
+                  <div class="hero01-content">
+                    <p class="hero01-description" style="font-family: 'SF Pro Display', sans-serif;"><br><br><br><br>Discover exclusive and rare items from our Summer 2023 collection, including photo cards, rare action figures, toys, and more.</p>
+                    <img alt="Summer Collection" src="image.jpg" class="hero01-image">
+                  </div>
+
+                </div>
+                <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+                <div class="hero01-frame4">
+                  <span class="hero01-text"><a href="shop.html">Shop</a></span>
+                  <span class="hero01-text02"><a href="team.html">Team</a></span>
+                  <span class="hero01-text04"><a href="about.html">About</a></span>
+                  <div class="hero01-group6">
+                    <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+                    <span class="hero01-text06"  style="color: white;">Search</span>
+                  </div>
+                </div>
+                <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+                <div class="hero01-frame5">
+                  <div class="hero01-group4">
+                    <span class="hero01-text08"  style="color: white;">3</span>
+                    <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+                  </div>
+                  <span class="hero01-text09"  style="color: white;">Login</span>
+                </div>
+              </div>
+              </div>
   <div class="about-container">
     <div class="about-title">Who We Are</div>
     <div class="about-description">
