--- a/about.html
+++ b/about.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <style>
     html {
       background-color: #fbfbe9;
     }
 
-    /* Existing CSS styles here */
 
     /* About section styles */
     .about-container {
