--- a/shop.html
+++ b/shop.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <style>
     @font-face {
   font-family: 'SF Pro Display';
   src: url('fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
-  /* Add other font properties as needed */
+
 }
 html {
     background-color: #fbfbe9;
