--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
   <style>
     @font-face {
   font-family: 'SF Pro Display';
-  src: url('fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
+  src: url('SFPRODISPLAYREGULAR.OTF') format('opentype');
 
 }
 html {
@@ -129,7 +129,7 @@ html {
       font-size: 14px;
       appearance: none;
       -webkit-appearance: none;
-      background-image: url('public/playground_assets/arrow-down.svg');
+      background-image: url('arrow-down.svg');
       background-repeat: no-repeat;
       background-position: right center;
       background-size: 16px;
@@ -147,7 +147,7 @@ html {
     <div class="hero01-hero01">
         <div class="hero01-navbar">
             <div class="hero01-navbar">
-                <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+                <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
                 <div class="hero01-frame4">
                   <h1 class="hero01-heading" style="font-family: 'SF Pro Display', sans-serif;"><br><br>The Summer 2023 Collections</h1>
 
@@ -157,21 +157,21 @@ html {
                   </div>
 
                 </div>
-                <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+                <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
                 <div class="hero01-frame4">
                   <span class="hero01-text"><a href="shop.html">Shop</a></span>
                   <span class="hero01-text02" style="color: white;"><a href="team.html">Team</a></span>
                   <span class="hero01-text04"  style="color: white;"><a href="about.html">About</a></span>
                   <div class="hero01-group6">
-                    <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+                    <img alt="SearchI162" src="search9.svg" class="hero01-search">
                     <span class="hero01-text06"  style="color: white;">Search</span>
                   </div>
                 </div>
-                <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+                <img alt="Line1I162" src="line36t.svg" class="hero01-line1">
                 <div class="hero01-frame5">
                   <div class="hero01-group4">
                     <span class="hero01-text08"  style="color: white;">3</span>
-                    <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+                    <img alt="VectorI162" src="vectorer7.svg" class="hero01-vector">
                   </div>
                   <span class="hero01-text09"  style="color: white;">Login</span>
                 </div>
@@ -223,14 +223,14 @@ html {
               
   <div class="product-listing">
     <div class="product">
-      <img src="public\playground_assets\image-removebg-preview.png" alt="Product Image" class="product-image">
+      <img src="mage-removebg-preview.png" alt="Product Image" class="product-image">
       <h3 class="product-title">Boa Hancock</h3>
       <p class="product-price">$19.99</p>
       <button class="product-button">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="public\playground_assets\image-removebg-preview.png" alt="Product Image" class="product-image">
+      <img src="image-removebg-preview.png" alt="Product Image" class="product-image">
       <h3 class="product-title">Product 2</h3>
       <p class="product-price">$24.99</p>
       <button class="product-button">Add to Cart</button>
