--- a/shop.html
+++ b/shop.html
@@ -226,7 +226,7 @@ html {
       <img src="mage-removebg-preview.png" alt="Product Image" class="product-image">
       <h3 class="product-title">Boa Hancock</h3>
       <p class="product-price">$19.99</p>
-      <button class="product-button">Add to Cart</button>
+      <button class="product-button"><a href="productpage.html">Add to Cart</a></button>
     </div>
 
     <div class="product">
