--- a/shop.html
+++ b/shop.html
@@ -223,7 +223,7 @@ html {
               
   <div class="product-listing">
     <div class="product">
-      <img src="mage-removebg-preview.png" alt="Product Image" class="product-image">
+      <img src="image-removebg-preview.png" alt="Product Image" class="product-image">
       <h3 class="product-title">Boa Hancock</h3>
       <p class="product-price">$19.99</p>
       <button class="product-button"><a href="productpage.html">Add to Cart</a></button>
