--- a/productpage.html
+++ b/productpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="./main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 
    <style>
     .product-page {
@@ -10,7 +10,7 @@
 }
 @font-face {
   font-family: 'SF Pro Display';
-  src: url('fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
+  src: url('SFPRODISPLAYREGULAR.OTF') format('opentype');
   /* Add other font properties as needed */
 }
 
@@ -60,37 +60,37 @@
     <div class="hero01-container">
         <div class="hero01-hero01">
           <div class="hero01-navbar">
-            <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+            <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
             <div class="hero01-frame4">
               <span class="hero01-text"><a href="shop.html">Shop</a></span>
               <span class="hero01-text02">Stories</span>
               <span class="hero01-text04">About</span>
               <div class="hero01-group6">
-                <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+                <img alt="SearchI162" src="search9.svg" class="hero01-search">
                 <span class="hero01-text06">Search</span>
               </div>
             </div>
-            <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+            <img alt="Line1I162" src="line36t.svg" class="hero01-line1">
             <div class="hero01-frame5">
               <div class="hero01-group4">
                 <span class="hero01-text08">3</span>
-                <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+                <img alt="VectorI162" src="vectorer7.svg" class="hero01-vector">
               </div>
               <span class="hero01-text09">Login</span>
             </div>
           </div>
   <div class="product-page">
     <div class="product-image">
-      <img src="public\playground_assets\image-removebg-preview.png" alt="Product Image">
+      <img src="image-removebg-preview.png" alt="Product Image">
     </div>
     <div class="product-details">
       <h1 class="product-title">boa hanCOCK</h1>
       <p class="product-description">Product Description</p>
       <select class="product-image-select" onchange="changeImage(this)">
-        <option value="public\playground_assets\image-removebg-preview.png">Front View</option>
-        <option value="public/playground_assets/bo.png">Back View</option>
+        <option value="image-removebg-preview.png">Front View</option>
+        <option value="bo.png">Back View</option>
       </select>
-      <button class="checkout-button">Checkout</button>
+        <button class="checkout-button"><a href="checkout.html">Checkout</a></button>
     </div>
   </div>
   
