--- a/checkout.html
+++ b/checkout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./checkout.css" rel="stylesheet">
-  <link href="./main.css" rel="stylesheet">
+  <link href="checkout.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <style>
     /* Add your checkout page styles here */
     .checkout-container {
@@ -99,21 +99,21 @@
     <div class="hero01-container">
         <div class="hero01-hero01">
           <div class="hero01-navbar">
-            <img alt="RectangleI162" src="public/playground_assets/rectangle.png" class="hero01-rectangle">
+            <img alt="RectangleI162" src="rectangle.png" class="hero01-rectangle">
             <div class="hero01-frame4">
               <span class="hero01-text"><a href="shop.html">Shop</a></span>
               <span class="hero01-text02">Stories</span>
               <span class="hero01-text04">About</span>
               <div class="hero01-group6">
-                <img alt="SearchI162" src="public/playground_assets/search9.svg" class="hero01-search">
+                <img alt="SearchI162" src="search9.svg" class="hero01-search">
                 <span class="hero01-text06">Search</span>
               </div>
             </div>
-            <img alt="Line1I162" src="public/playground_assets/line36t.svg" class="hero01-line1">
+            <img alt="Line1I162" src="line36t.svg" class="hero01-line1">
             <div class="hero01-frame5">
               <div class="hero01-group4">
                 <span class="hero01-text08">3</span>
-                <img alt="VectorI162" src="public/playground_assets/vectorer7.svg" class="hero01-vector">
+                <img alt="VectorI162" src="vectorer7.svg" class="hero01-vector">
               </div>
               <span class="hero01-text09">Login</span>
             </div>
